--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-await": "^1.1.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.5",
+    "mongoose": "^7.5.3",
+    "mongoose-long": "^0.7.1",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.3",
     "path": "^0.12.7"
   }
 }
