Feat: Conexión al server

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 PORT=3001
 DB_URI: mongodb+srv://linaferrodri:TITANIC0921!@cluster0.ekgbaej.mongodb.net/?retryWrites=true&w=majority
+
+IP_ADDRESS_1= smartfc.unicauca.edu.co
+IP_ADDRESS_2= 45.231.184.246
+
