--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "body-parser": "^1.20.2",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-await": "^1.1.0",
     "jsonwebtoken": "^9.0.0",
@@ -25,6 +25,7 @@
     "mongoose-long": "^0.7.1",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "ping": "^0.4.4"
   }
 }
