--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ DB_URI: mongodb+srv://linaferrodri:TITANIC0921!@cluster0.ekgbaej.mongodb.net/?re
 
 IP_ADDRESS_1= smartfc.unicauca.edu.co
 IP_ADDRESS_2= 45.231.184.246
+export SECRET_KEY=AplicacionWebSmartFC2023
 
